# factorio-server

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  shell.nix  test-config.toml  test-payment.sh
migrations/: 001_initial.sql  002_deaths.sql
mods/spectator-control/: README.md  control.lua  info.json
scripts/: backup.sh  deploy.sh  setup-factorio-service.sh  setup-server.sh  sync-factorio.sh
src/: config.rs  db.rs  domain.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  mod.rs  models.rs  public.rs
src/services/: mod.rs  payment.rs  rcon.rs  rotation.rs  scheduler.rs  whitelist.rs
static/: admin.html  admin.js  index.html  index.js
tests/: api_test.rs  db_test.rs  domain_test.rs
