[package]
name = "factorio-seasons"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = "0.8"
tokio              = { version = "1", features = ["full"] }
tower-http         = { version = "0.6", features = ["fs", "cors"] }
tower_governor     = "0.8"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
sqlx               = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror          = "2"
rcon-client        = "0.1"
tokio-util         = { version = "0.7", features = ["io"] }
alloy              = { version = "1", features = ["providers", "transports", "rpc-types"] }

[dev-dependencies]
tower              = { version = "0.5", features = ["util"] }
